# Sampling-free-Epistemic-Uncertainty

./: setup.py
UCI_regression/: setup.cfg
UCI_regression/Uncertainty_Propagator/: layer_link.py  uncertainty_propagator.py
UCI_regression/Uncertainty_Propagator/layers/: activations.py
