[metadata]
name = Sampling-free-Epistemic-Uncertainty
version = 0.0.1
author = Scott Kramer
author_email = scott.kramer@amplitude.com
description = A small example package
url = https://github.com/amplitude/Sampling-free-Epistemic-Uncertainty/

[options]
package_dir = UCI_regression
python_requires = >=3.7

